Usability: Cell Editor Dialog opens also on doubleClick.

--- a/fe-designer-dragdrop/src/app/designer/table-element/table-element.html
+++ b/fe-designer-dragdrop/src/app/designer/table-element/table-element.html
@@ -13,6 +13,7 @@
               [class.selected]="isCellSelected(rowIndex, colIndex)"
               [attr.data-row]="rowIndex"
               [attr.data-col]="colIndex"
+              (click)="onCellClick($event,rowIndex,colIndex)" (dblclick)="onCellDoubleClick($event,rowIndex,colIndex)"
               [attr.data-has-subtable]="hasSubTable(rowIndex, colIndex) ? 'true' : null"
               [style.padding]="getCellPaddingString(rowIndex,colIndex)"
               [style.text-align]="getCellHAlign(rowIndex,colIndex)"
