--- a/fe-designer-dragdrop/src/app/designer/table-element/table-element.less
+++ b/fe-designer-dragdrop/src/app/designer/table-element/table-element.less
@@ -45,6 +45,7 @@
       height: 100%;
       box-sizing: border-box;
       white-space: pre-wrap; // preserve whitespace & newlines
+      pointer-events: none; // allow selecting cell when clicking on text
 
       // Font properties are now inherited from <td> element
       // Quill-generated inline styles in content will override via higher specificity
