Cell.dblClick opens ContentEditor.

--- a/fe-designer-dragdrop/src/app/designer/table-element/cell-editor-dialog.less
+++ b/fe-designer-dragdrop/src/app/designer/table-element/cell-editor-dialog.less
@@ -9,9 +9,9 @@
 
 .cell-editor-dialog {
   position: fixed;
-  top: 50%;
+  top: 32px; // near top, slight offset
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translateX(-50%); // only horizontal centering
   width: 1000px;
   max-width: 95vw;
   background: @surface;
