--- a/fe-designer-dragdrop/src/app/layout/menu-bar/menu-bar.html
+++ b/fe-designer-dragdrop/src/app/layout/menu-bar/menu-bar.html
@@ -13,18 +13,21 @@
           <span>New</span>
           <span class="shortcut">Ctrl+N</span>
         </button>
+        <button class="dropdown-item" (click)="handleLoadDesign()" data-testid="menu-file-load-design">
+          <span>Open Report</span>
+          <span class="shortcut">Ctrl+O</span>
+        </button>
+        <button class="dropdown-item" (click)="handleSaveDesign()" data-testid="menu-file-save-design">
+          <span>Save Report</span>
+          <span class="shortcut">Ctrl+S</span>
+        </button>
         <button class="dropdown-item" (click)="handleExportAsXhtml()" data-testid="menu-file-save">
           <span>Export as Xhtml</span>
           <span class="shortcut">Ctrl+E</span>
         </button>
-        <button class="dropdown-item" (click)="handleSaveDesign()" data-testid="menu-file-save-design">
-          <span>Save Report Design</span>
-        </button>
-        <button class="dropdown-item" (click)="handleLoadDesign()" data-testid="menu-file-load-design">
-          <span>Load Report Design</span>
-        </button>
         <button class="dropdown-item" (click)="handleClose()" data-testid="menu-file-close">
           <span>Close</span>
+          <span class="shortcut">Ctrl+W</span>
         </button>
       </div>
     }
