SaveDesign Popup customized.

--- a/fe-designer-dragdrop/src/app/app.html
+++ b/fe-designer-dragdrop/src/app/app.html
@@ -69,6 +69,11 @@
   (onExportAsXhtml)="handleSave($event)">
 </app-save-dialog>
 
+<app-save-report-dialog
+  (onSave)="handleSaveReport($event)"
+  (onCancel)="handleCancelSaveReport()">
+</app-save-report-dialog>
+
 @if (showOptionsDialog()) {
   <app-options-dialog
     (close)="closeOptionsDialog()">
