--- a/fe-designer-dragdrop/src/app/layout/menu-bar/menu-bar.less
+++ b/fe-designer-dragdrop/src/app/layout/menu-bar/menu-bar.less
@@ -85,3 +85,15 @@
   bottom: 0;
   z-index: @z-dropdown - 1;
 }
+
+.menu-layout-name {
+  margin-left: auto;
+  color: @sidebar-foreground;
+  font-size: 13px;
+  font-weight: 500;
+  max-width: 45%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding: 0 8px;
+}
