--- a/fe-designer-dragdrop/src/styles.less
+++ b/fe-designer-dragdrop/src/styles.less
@@ -6,6 +6,10 @@
 /* Google webfonts for quill custom font whitelist */
 /* Webfonts loaded via index.html <link> tags to avoid LESS trying to resolve them */
 
+/* Managed fonts auto-registered for Quill editor rendering */
+@font-face { font-family: 'KIX Barcode'; src: url('/managed-fonts/KIXBarcode.woff2') format('woff2'); font-weight: normal; font-style: normal; }
+@font-face { font-family: 'Roboto'; src: url('/managed-fonts/Roboto-Regular.woff2') format('woff2'); font-weight: 400; font-style: normal; }
+
 // ============================================
 // GLOBAL STYLES
 // ============================================
