--- a/fe-designer-dragdrop/src/app/layout/menu-bar/menu-bar.html
+++ b/fe-designer-dragdrop/src/app/layout/menu-bar/menu-bar.html
@@ -110,7 +110,7 @@
           (click)="openCalibration()"
           data-testid="menu-view-calibrate">
           <span>Calibrate Screen</span>
-          <span class="shortcut">F12</span>
+          <span class="shortcut">Ctrl+F12</span>
         </button>
       </div>
     }
