Use Infomedics Theme (Huisstyle).

--- a/fe-designer-dragdrop/public/styles/a4-common-styles.css
+++ b/fe-designer-dragdrop/public/styles/a4-common-styles.css
@@ -27,7 +27,7 @@ html, body {
   -fs-pdf-font-encoding: Identity-H;
 }
 @font-face {
-  font-family: 'Public Sans';
+  font-family: 'Bariol';
   font-weight: normal;
   font-style: normal;
   -fs-pdf-font-embed: embed;
