--- a/fe-designer-dragdrop/src/app/designer/table-element/cell-editor-dialog.html
+++ b/fe-designer-dragdrop/src/app/designer/table-element/cell-editor-dialog.html
@@ -18,4 +18,34 @@
     <button type="button" (click)="save()" class="primary">Save</button>
     <button type="button" (click)="close()">Cancel</button>
   </div>
+
+  <!-- QR Code popover -->
+  <div class="qr-popover" *ngIf="showQrDialog" (mousedown)="$event.stopPropagation()" (click)="$event.stopPropagation()">
+    <form (ngSubmit)="submitQrDialog()" #qrF="ngForm">
+      <h3>Insert QR Code</h3>
+      <label>
+        Data
+        <textarea name="data" rows="3" maxlength="2048" [(ngModel)]="qrForm.data" required autofocus></textarea>
+      </label>
+      <label>
+        Size
+        <input name="size" type="number" min="16" max="1024" [(ngModel)]="qrForm.size" required />
+      </label>
+      <label>
+        EC Level
+        <select name="ec" [(ngModel)]="qrForm.ec">
+          <option *ngFor="let l of ['L','M','Q','H']" [value]="l">{{l}}</option>
+        </select>
+      </label>
+      <label>
+        Margin
+        <input name="margin" type="number" min="0" max="64" [(ngModel)]="qrForm.margin" />
+      </label>
+      <div class="btns">
+        <button type="button" (click)="cancelQrDialog()">Cancel</button>
+        <button type="submit" [disabled]="!qrF.form.valid">Ok</button>
+      </div>
+    </form>
+  </div>
+
 </div>
