feat(qr): interpret size as mm and convert to px on export using trueSizeScale

--- a/fe-designer-dragdrop/src/app/designer/table-element/cell-editor-dialog.html
+++ b/fe-designer-dragdrop/src/app/designer/table-element/cell-editor-dialog.html
@@ -28,7 +28,7 @@
         <textarea name="data" rows="3" maxlength="2048" [(ngModel)]="qrForm.data" required autofocus></textarea>
       </label>
       <label>
-        Size
+        Size (mm)
         <input name="size" type="number" min="16" max="1024" [(ngModel)]="qrForm.size" required />
       </label>
       <label>
